--- a/root/index.html
+++ b/root/index.html
@@ -25,6 +25,7 @@
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
+               <!--  hii -->
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Services</a></li>
@@ -116,7 +117,7 @@
                             </div>
                             <br />
                             <div id="success"></div>
-                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
+                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Submit</button></div>
                         </form>
                     </div>
                 </div>
